change java 1.8 code